Updated composer.json with licence info

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
     "name": "jaxwilko/simple-config",
+    "description": "A simple fluent interface for creating php config files",
+    "license": "MIT",
     "authors": [
         {
             "name": "Jack Wilkinson",
